--- a/movie_scoring_application/pubspec.yaml
+++ b/movie_scoring_application/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   realm: ^0.3.1+beta
 
+  # Required for ChangeNotifier, etc.
+  provider: ^6.0.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
