Fine Tuning Of ViewModel To Access TextEditingControllers, Addition Of Custom Font

--- a/movie_scoring_application/pubspec.yaml
+++ b/movie_scoring_application/pubspec.yaml
@@ -91,3 +91,12 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+  fonts:
+     - family: OpenSans
+       fonts:
+         - asset: fonts/OpenSans-Regular.ttf
+         - asset: fonts/OpenSans-Italic.ttf
+           style: italic
+         - asset: fonts/OpenSans-Bold.ttf
+           weight: 500
